@@ -90,6 +90,9 @@ CEditorPreferencePage.cCommentTaskTags.singleLine=Single-line comment
 CEditorPreferencePage.cCommentTaskTags.keywords=Keywords
 CEditorPreferencePage.cCommentTaskTags.builtInTypes=Built-in types
 CEditorPreferencePage.cCommentTaskTags.strings=Strings
+CEditorPreferencePage.cCommentTaskTags.operators=Operators
+CEditorPreferencePage.cCommentTaskTags.braces=Braces
+CEditorPreferencePage.cCommentTaskTags.numbers=Numbers
 CEditorPreferencePage.cCommentTaskTags.others=Others
 CEditorPreferencePage.annotationsPage.presentationOptions=Annotation Presentation Options
 CEditorPreferencePage.annotationsPage.showInText=Show In Text
